# Heretic2R

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
src/: CMakeLists.txt
src/H2Common/: CMakeLists.txt
src/Player/: CMakeLists.txt  p_types.h
src/client/: cl_effects.c  cl_main.c
src/client effects/: CMakeLists.txt  Client Effects.vcxproj
src/game/: CMakeLists.txt  q_shared.h
src/launcher/: CMakeLists.txt
src/ref_gl1/: CMakeLists.txt
src/snd_sdl3/: CMakeLists.txt
src/win32/: clfx_dll.c
