set(H2COMMON_LIBRARY_NAME "H2Common")
file(GLOB H2COMMON_SOURCE_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/*.c
	${CMAKE_CURRENT_SOURCE_DIR}/../game/q_shared.c
)

add_library(${H2COMMON_LIBRARY_NAME} ${H2COMMON_SOURCE_FILES})
target_include_directories(${H2COMMON_LIBRARY_NAME} PRIVATE
	${CMAKE_CURRENT_SOURCE_DIR}/../game
	${CMAKE_CURRENT_SOURCE_DIR}/../qcommon
)

if(WIN32)
	set(H2COMMON_INSTALL_DEST ${CMAKE_INSTALL_BINDIR})
elseif(UNIX AND NOT APPLE)
	set(H2COMMON_INSTALL_DEST ${CMAKE_INSTALL_DATAROOTDIR}/games/heretic2/)
else()
	set(H2COMMON_INSTALL_DEST ${CMAKE_INSTALL_LIBDIR})
endif()

install(TARGETS ${H2COMMON_LIBRARY_NAME}
	DESTINATION ${H2COMMON_INSTALL_DEST}
	PERMISSIONS WORLD_READ GROUP_READ OWNER_READ OWNER_WRITE
)
