set(PLAYER_LIBRARY_NAME "Player")
file(GLOB PLAYER_SOURCE_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/*.c
)

add_library(${PLAYER_LIBRARY_NAME} ${PLAYER_SOURCE_FILES})
target_include_directories(${PLAYER_LIBRARY_NAME} PRIVATE
	${CMAKE_CURRENT_SOURCE_DIR}/../qcommon
)


if(WIN32)
	set(PLAYER_INSTALL_DEST ${CMAKE_INSTALL_BINDIR})
elseif(UNIX AND NOT APPLE)
	set(PLAYER_INSTALL_DEST ${CMAKE_INSTALL_DATAROOTDIR}/games/heretic2/)
else()
	set(PLAYER_INSTALL_DEST ${CMAKE_INSTALL_LIBDIR})
endif()

install(TARGETS ${PLAYER_LIBRARY_NAME}
	DESTINATION ${PLAYER_INSTALL_DEST}
	PERMISSIONS WORLD_READ GROUP_READ OWNER_READ OWNER_WRITE
)
