cmake_minimum_required(VERSION 3.22)

set(CLIENTFX_LIBRARY_NAME "clientfx")
file(GLOB CLIENTFX_SOURCE_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/*.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../qcommon/anorms.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../qcommon/Message.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../qcommon/netmsg_read.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../qcommon/turbsin.c
)

add_library(${CLIENTFX_LIBRARY_NAME} ${CLIENTFX_SOURCE_FILES})
target_include_directories(${CLIENTFX_LIBRARY_NAME} PRIVATE
	${CMAKE_CURRENT_SOURCE_DIR}/../game
	${CMAKE_CURRENT_SOURCE_DIR}/../qcommon
)

message(STATUS "Building client effects shared library ${CLIENTFX_LIBRARY_NAME}${CMAKE_SHARED_LIBRARY_SUFFIX}")

if(WIN32)
	set(CLIENTFX_INSTALL_DEST ${CMAKE_INSTALL_BINDIR})
elseif(UNIX AND NOT APPLE)
	set(CLIENTFX_INSTALL_DEST ${CMAKE_INSTALL_DATAROOTDIR}/games/heretic2/)
else()
	set(CLIENTFX_INSTALL_DEST ${CMAKE_INSTALL_LIBDIR})
endif()

install(TARGETS ${CLIENTFX_LIBRARY_NAME}
	DESTINATION ${CLIENTFX_INSTALL_DEST}
	PERMISSIONS WORLD_READ GROUP_READ OWNER_READ OWNER_WRITE
)
