set(GAME_LIBRARY_NAME "game${H2R_BUILD_ARCH}")
file(GLOB GAMELIB_SOURCE_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/*.c
	${CMAKE_CURRENT_SOURCE_DIR}/../qcommon/Message.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../qcommon/p_dll.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../qcommon/Skeletons.c
)

add_library(${GAME_LIBRARY_NAME} ${GAMELIB_SOURCE_FILES})
target_include_directories(${GAME_LIBRARY_NAME} BEFORE PRIVATE
	${CMAKE_CURRENT_SOURCE_DIR}/../qcommon
	${CMAKE_CURRENT_SOURCE_DIR}/../Player
)

if(WIN32)
	set(GAMELIB_INSTALL_DEST ${CMAKE_INSTALL_BINDIR}/base/)
elseif(UNIX AND NOT APPLE)
	set(GAMELIB_INSTALL_DEST ${CMAKE_INSTALL_DATAROOTDIR}/games/heretic2/)
else()
	set(GAMELIB_INSTALL_DEST ${CMAKE_INSTALL_LIBDIR})
endif()

install(TARGETS ${GAME_LIBRARY_NAME}
	DESTINATION ${GAMELIB_INSTALL_DEST}
	PERMISSIONS WORLD_READ GROUP_READ OWNER_READ OWNER_WRITE
)
