set(LAUNCHER_NAME "Heretic2R")
file(GLOB LAUNCHER_SOURCE_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/*.c
)

if(WIN32)
    list(APPEND LAUNCHER_SOURCE_FILES
		${CMAKE_CURRENT_SOURCE_DIR}/${LAUNCHER_NAME}.rc
	)
endif()

add_executable(${LAUNCHER_NAME} ${LAUNCHER_SOURCE_FILES})

set(LAUNCHER_INSTALL_DEST ${CMAKE_INSTALL_BINDIR})
install(TARGETS ${LAUNCHER_NAME}
	DESTINATION ${LAUNCHER_INSTALL_DEST}
	PERMISSIONS WORLD_READ GROUP_READ OWNER_READ OWNER_WRITE
)
