set(REFGL1_LIBRARY_NAME "ref_gl1")
file(GLOB REFGL1_SOURCE_FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/../../include/glad-GL1.3/glad.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../game/q_shared.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../qcommon/anorms.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../qcommon/Reference.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../qcommon/Skeletons.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../qcommon/turbsin.c
	${CMAKE_CURRENT_SOURCE_DIR}/src/*.c
)

add_library(${REFGL1_LIBRARY_NAME} ${REFGL1_SOURCE_FILES})

target_include_directories(${REFGL1_LIBRARY_NAME} PRIVATE
	${CMAKE_CURRENT_SOURCE_DIR}/../../include/glad-GL1.3
	${CMAKE_CURRENT_SOURCE_DIR}/../client
	${CMAKE_CURRENT_SOURCE_DIR}/../game
	${CMAKE_CURRENT_SOURCE_DIR}/../qcommon
)

if(WIN32)
	set(REFGL1_INSTALL_DEST ${CMAKE_INSTALL_BINDIR})
elseif(UNIX AND NOT APPLE)
	set(REFGL1_INSTALL_DEST ${CMAKE_INSTALL_DATAROOTDIR}/games/heretic2/)
else()
	set(REFGL1_INSTALL_DEST ${CMAKE_INSTALL_LIBDIR})
endif()

install(TARGETS ${REFGL1_LIBRARY_NAME}
	DESTINATION ${REFGL1_INSTALL_DEST}
	PERMISSIONS WORLD_READ GROUP_READ OWNER_READ OWNER_WRITE
)
