set(SNDSDL3_LIBRARY_NAME "snd_sdl3")
file(GLOB SNDSDL3_SOURCE_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/src/*.c
)

add_library(${SNDSDL3_LIBRARY_NAME} ${SNDSDL3_SOURCE_FILES})

target_include_directories(${SNDSDL3_LIBRARY_NAME} PRIVATE
	${CMAKE_CURRENT_SOURCE_DIR}/../game
)

if(WIN32)
	set(SNDSDL3_INSTALL_DEST ${CMAKE_INSTALL_BINDIR})
elseif(UNIX AND NOT APPLE)
	set(SNDSDL3_INSTALL_DEST ${CMAKE_INSTALL_DATAROOTDIR}/games/heretic2/)
else()
	set(SNDSDL3_INSTALL_DEST ${CMAKE_INSTALL_LIBDIR})
endif()

install(TARGETS ${SNDSDL3_LIBRARY_NAME}
	DESTINATION ${SNDSDL3_INSTALL_DEST}
	PERMISSIONS WORLD_READ GROUP_READ OWNER_READ OWNER_WRITE
)
